# STAMP

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  README.md  SPEC.md  pyproject.toml
.claude/: settings.json
.claude/commands/: spec.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: api.rst  changelog.rst  conf.py  contributing.rst  examples.md  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/examples/: quickstart.md  simulation.md
notebooks/: 01_quickstart.ipynb  02_simulation_validation.ipynb  03_multi_state_pipeline.ipynb  04_mipar_feature_analysis.ipynb  05_mipar_image_analysis.ipynb
notebooks/data/: GOO220_51_BatchMeas.csv  GOO220_52_BatchMeas.csv  GOO220_53_BatchMeas.csv  apparent_diameters.txt
specs/: _template.md  export-journal-style.md  io-mipar-image.md  stereo-image-quantities.md
src/stamp/: __init__.py  _types.py  export.py  io.py  pipeline.py  plot.py  simulate.py  stats.py  stereo.py
tests/: test_export.py  test_io.py  test_pipeline.py  test_plot.py  test_simulate.py  test_stamp.py  test_stats.py  test_stereo.py
