[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "nanoshot-stamp"
dynamic = ["version"]
description = "Stereological Tools for Analysis of Microstructural Parameters"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Johan Westraadt", email = "johan.westraadt@gmail.com" }]
requires-python = ">=3.9"
keywords = ["science", "research"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
notebooks = [
  "jupyterlab>=4.0",
  "ipykernel>=6.0",
]

[project.urls]
Homepage = "https://github.com/jwestraadt/STAMP"
Documentation = "https://stamp.readthedocs.io"
Repository = "https://github.com/jwestraadt/STAMP"
"Bug Tracker" = "https://github.com/jwestraadt/STAMP/issues"
Changelog = "https://github.com/jwestraadt/STAMP/blob/main/CHANGELOG.md"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "CHANGELOG.md", "CONTRIBUTING.md"]

[tool.hatch.build.targets.wheel]
packages = ["src/stamp"]

[dependency-groups]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "sphinx>=7.0",
  "pydata-sphinx-theme>=0.15",
  "sphinx-autoapi>=3.0",
  "myst-parser>=2.0",
  "jupyterlab>=4.0",
  "ipykernel>=6.0",
  "nbsphinx>=0.9",
  "pre-commit>=3.6",
]

[tool.ruff]
line-length = 88
target-version = "py39"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=stamp --cov-report=term-missing"
filterwarnings = ["always::UserWarning"]

[tool.coverage.run]
source = ["stamp"]

[tool.coverage.report]
fail_under = 60
show_missing = true
